# id3cli

./: .justfile  AGENTS.md  CHANGELOG.md  Cargo.toml  GIT_FLOW.md  README.md  RELEASE.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: lib.rs  main.rs  tests.rs
tests/: integration_test.rs
